postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-pod
spec:
  selector:
    matchLabels:
      app: postgres # has to match .spec.template.metadata.labels
  serviceName: "postgres-service"
  replicas: 1 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: postgres # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: my-postgres
        image: postgres:18 # pinned, a major version upgrade can't start on old data
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql # postgres 18+ keeps data in /var/lib/postgresql/18/docker
          subPath: postgres-volume-claim-0 # node path: /mnt/data/postgres-volume-0/postgres-volume-claim-0
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-volume-claim-0 # defined in postgres-volume.yml
