store-fe.yml
apiVersion: v1
kind: Service
metadata:
  name: store-fe-service
  namespace: prod-core
  labels:
    app: store-fe
spec:
  type: ClusterIP
  selector:
    app: store-fe
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-fe
  namespace: prod-core
  labels:
    app: store-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store-fe # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: store-fe
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: store-fe
        image: ghcr.io/waleedyk07/store-fe:latest
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
